--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,11 +18,12 @@
                 android:id="@+id/textView"
                 android:layout_marginTop="15dp"
                 android:textSize="15sp"
+                android:textColor="@android:color/black"
                 android:padding="10dp"
                 android:layout_gravity="fill"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                tools:text="kkkkkkk\nkkkk"
+                tools:text="TextView"
                 />
     </ScrollView>
 
